--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,4 +2,4 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - init: mvn install -DskipTests=false
+  - init: mvn compile javadoc:javadoc -DskipTests=true
